--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
 
   <body>
-    <h2>\Hello World, we are software developers!</h2>
+    <div>
+      <h1 id="title">MICROVERSE SURVEY FORM!</h1> 
+      <p> Kindly fill out this form and help improve the learning.</p>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
