Added a form id and label

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 
   <body>
     <div>
-      <h1 id="title">MICROVERSE SURVEY FORM!</h1> 
+      <h1 id="title">MICROVERSE SURVEY FORM!</h1>
       <p> Kindly fill out this form and help improve the learning.</p>
+
+      <form id="survey-form" action="index.html" method="post">
+        <label id="name-label" for="name">Name</label>
+      </form>
+
     </div>
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
