--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
       <p> Kindly fill out this form and help improve the learning.</p>
 
       <form id="survey-form" action="index.html" method="post">
-        <label id="name-label" for="name">Name</label>
+        <div class="form-group">
+          <label id="name-label" for="name">Name</label>
+          <input type="text" name="name" id="name" class="form-control " placeholder="Enter your name" required/>
+        <div class="form-group">
+          <label id="email" for="email"> Email </label>
+          <input type="text" name="name" id="name" class="form-control " placeholder="Enter your name" required/>
+        </div>
+        <div class="form-group">
+          <label id="number" for="age"> Age </label>
+          <input type="number" name="age" id="number" min="18" max="99" class="form-control" placeholder="Age"/>
+        </div>
+          
+        </div>
+        
       </form>
 
     </div>
