--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <h1 id="title">MICROVERSE SURVEY FORM!</h1>
-      <p> Kindly fill out this form and help improve the learning.</p>
+      <p id="description"> Kindly fill out this form and help improve the learning.</p>
 
       <form id="survey-form" action="index.html" method="post">
         <div class="form-group">
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
           <label id="email" for="email"> Email </label>
-          <input type="text" name="name" id="name" class="form-control " placeholder="Enter your name" required/>
+          <input type="email" name="email" id="email" class="form-control " placeholder="Enter your email" required/>
         </div>
         <div class="form-group">
           <label id="number" for="age"> Age </label>
